--- a/package.json
+++ b/package.json
@@ -3,6 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bentley/bentleyjs-core": "1.12.0",
+    "@bentley/geometry-core": "1.12.0",
+    "@bentley/imodeljs-clients": "1.12.0",
+    "@bentley/imodeljs-common": "1.12.0",
+    "@bentley/imodeljs-frontend": "1.12.0",
+    "@bentley/imodeljs-i18n": "1.12.0",
+    "@bentley/imodeljs-quantity": "1.12.0",
+    "@bentley/presentation-common": "1.12.0",
+    "@bentley/presentation-components": "1.12.0",
+    "@bentley/presentation-frontend": "1.12.0",
+    "@bentley/ui-abstract": "1.12.0",
+    "@bentley/ui-components": "1.12.0",
+    "@bentley/ui-core": "1.12.0",
+    "@blueprintjs/core": "^3.24.0",
+    "lodash": "^4.17.10",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0"
+  },
+  "devDependencies": {
+    "@bentley/build-tools": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,9 +33,8 @@
     "@types/node": "^12.12.29",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
+    "@types/react-router-dom": "^5.1.3",
+    "eslint-plugin-flowtype": "^3.13.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
