--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "noImplicitAny": false,
+    "strictPropertyInitialization": false,
     "noUnusedLocals": false
   },
   "include": ["./**/*.ts", "./**/*.tsx"],
