--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
-  "extends": "./node_modules/@bentley/build-tools/tsconfig-base.json",
+  "include": [
+    "./**/*.ts",
+    "./**/*.tsx"
+  ],
+  "exclude": [
+    "lib",
+    "node_modules",
+    "test"
+  ],
   "compilerOptions": {
     "skipLibCheck": true,
     "resolveJsonModule": true,
@@ -14,8 +22,15 @@
     "noEmit": true,
     "noImplicitAny": false,
     "strictPropertyInitialization": false,
-    "noUnusedLocals": false
-  },
-  "include": ["./**/*.ts", "./**/*.tsx"],
-  "exclude": ["lib", "node_modules", "test"]
+    "noUnusedLocals": false,
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react"
+  }
 }
