--- a/package.json
+++ b/package.json
@@ -25,7 +25,15 @@
         "@blueprintjs/core": "^3.31.0",
         "@blueprintjs/select": "^3.13.7",
         "axios": "^0.19.2",
+        "d3-array": "^2.8.0",
+        "d3-axis": "^2.0.0",
+        "d3-brush": "^2.1.0",
+        "d3-geo": "^2.0.1",
         "d3-scale": "^3.2.3",
+        "d3-selection": "^2.0.0",
+        "d3-shape": "^2.0.0",
+        "d3-svg-legend": "^2.25.6",
+        "d3-transition": "^2.0.0",
         "lodash": "^4.17.20",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
@@ -43,12 +51,10 @@
         "@types/react": "^16.9.49",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.5",
-        "@typescript-eslint/eslint-plugin": "^4.5.0",
-        "@typescript-eslint/parser": "^4.5.0",
-        "eslint": "^7.11.0",
-        "eslint-config-prettier": "^6.14.0",
-        "eslint-plugin-flowtype": "^3.13.0",
         "typescript": "^3.9.7"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
     },
     "scripts": {
         "start": "react-scripts start",
