--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,25 @@
 {
-  "include": [
-    "./**/*.ts",
-    "./**/*.tsx"
-  ],
-  "exclude": [
-    "lib",
-    "node_modules",
-    "test"
-  ],
-  "compilerOptions": {
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "baseUrl": "./node_modules",
-    "outDir": "./lib",
-    "allowJs": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "isolatedModules": true,
-    "noEmit": true,
-    "noImplicitAny": false,
-    "strictPropertyInitialization": false,
-    "noUnusedLocals": false,
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "jsx": "react"
-  }
+    "include": ["./**/*.ts", "./**/*.tsx"],
+    "exclude": ["lib", "node_modules", "test", "./**/SearchBar.tsx"],
+    "compilerOptions": {
+        "skipLibCheck": true,
+        "resolveJsonModule": true,
+        "baseUrl": "./node_modules",
+        "outDir": "./lib",
+        "allowJs": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "isolatedModules": true,
+        "noEmit": true,
+        "noImplicitAny": false,
+        "strictPropertyInitialization": false,
+        "noUnusedLocals": false,
+        "target": "es5",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "jsx": "react"
+    }
 }
