--- a/package.json
+++ b/package.json
@@ -24,16 +24,9 @@
         "@bentley/webgl-compatibility": "2.5.3",
         "@blueprintjs/core": "^3.31.0",
         "@blueprintjs/select": "^3.13.7",
+        "@nivo/bar": "^0.63.1",
+        "@nivo/line": "^0.63.1",
         "axios": "^0.19.2",
-        "d3-array": "^2.8.0",
-        "d3-axis": "^2.0.0",
-        "d3-brush": "^2.1.0",
-        "d3-geo": "^2.0.1",
-        "d3-scale": "^3.2.3",
-        "d3-selection": "^2.0.0",
-        "d3-shape": "^2.0.0",
-        "d3-svg-legend": "^2.25.6",
-        "d3-transition": "^2.0.0",
         "lodash": "^4.17.20",
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
