--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@bentley/bentleyjs-core": "2.5.3",
-        "@bentley/frontend-authorization-client": "2.5.3",
-        "@bentley/geometry-core": "2.5.3",
-        "@bentley/imodelhub-client": "2.5.3",
+        "@bentley/bentleyjs-core": "2.8.0",
+        "@bentley/frontend-authorization-client": "2.8.0",
+        "@bentley/geometry-core": "2.8.0",
+        "@bentley/imodelhub-client": "2.8.0",
         "@bentley/imodeljs-clients": "^1.14.1",
-        "@bentley/imodeljs-common": "2.5.3",
-        "@bentley/imodeljs-frontend": "2.5.3",
-        "@bentley/imodeljs-i18n": "2.5.3",
-        "@bentley/imodeljs-quantity": "2.5.3",
-        "@bentley/orbitgt-core": "2.5.3",
-        "@bentley/presentation-common": "2.5.3",
-        "@bentley/presentation-components": "2.5.3",
-        "@bentley/presentation-frontend": "2.5.3",
-        "@bentley/product-settings-client": "2.5.3",
-        "@bentley/rbac-client": "2.5.3",
-        "@bentley/ui-abstract": "2.5.3",
-        "@bentley/ui-components": "2.5.3",
-        "@bentley/ui-core": "2.5.3",
-        "@bentley/webgl-compatibility": "2.5.3",
+        "@bentley/imodeljs-common": "2.8.0",
+        "@bentley/imodeljs-frontend": "2.8.0",
+        "@bentley/imodeljs-i18n": "2.8.0",
+        "@bentley/imodeljs-quantity": "2.8.0",
+        "@bentley/orbitgt-core": "2.8.0",
+        "@bentley/presentation-common": "2.8.0",
+        "@bentley/presentation-components": "2.8.0",
+        "@bentley/presentation-frontend": "2.8.0",
+        "@bentley/product-settings-client": "2.8.0",
+        "@bentley/rbac-client": "2.8.0",
+        "@bentley/telemetry-client": "^2.7.6",
+        "@bentley/ui-abstract": "2.8.0",
+        "@bentley/ui-components": "2.8.0",
+        "@bentley/ui-core": "2.8.0",
+        "@bentley/webgl-compatibility": "2.8.0",
         "@blueprintjs/core": "^3.31.0",
         "@blueprintjs/select": "^3.13.7",
         "@nivo/bar": "^0.63.1",
