--- a/package.json
+++ b/package.json
@@ -51,23 +51,15 @@
         "extends": "react-app"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "react-scripts --max-old-space-size=8192 start",
+        "build": "react-scripts --max-old-space-size=8192 build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "deploy": "aws s3 sync build/ s3://lehighmap.com",
         "distribute": "aws cloudfront create-invalidation --distribution-id E16OC5S6N61KF8 --paths \"/*\""
     },
     "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "production": [">0.2%", "not dead", "not op_mini all"],
+        "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
     }
 }
